--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  margin: 16px auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+  margin-top: 32px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-one {
+  height: 100px;
+  width: 100px;
+  margin-right: 10px;
+  background-color: black;
+  color: #ffff;
+  border: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-two {
+  height: 100px;
+  width: 100px;
+  margin-right: 10px;
+  background-color: black;
+  color: #ffff;
+  border: white;
+}
+
+.btn-three {
+  height: 100px;
+  width: 100px;
+  margin-right: 10px;
+  background-color: black;
+  color: #ffff;
+  border: white;
+}
+
+.counter-text {
+  /* display: flex;
+  align-content: center; */
+  font-size: 44px;
+  margin: 16px;
+  text-align: center;
 }
